[package]
name = "ippush"
version = "0.1.0"
edition = "2021"
description = "An IP remote procedure"
documentation = "https://docs.rs/ippush"
readme = "README.md"
repository = "https://github.com/shtsoft/ippush"
license = "GPL-3.0-or-later"
keywords = []
categories = []

[dependencies]

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
